--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,10 @@
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-.button{
-  position:relative;
-  margin-top: 20px;
-  height: 50px;
-  width:100px;
-  border-radius: 20px;
-  background-color: aqua;
-  cursor: pointer;
-
-}
-.button:hover{
-  background-color: white;
-  /* transition-delay:; */
-  color: #61dafb;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+	font-family: "Bigelow Rules";
+	font-size: 72px;
+	color: #0ccac4;
+	
 }
